軽微な修正2
