# interfaces/handler/oapi_types_gen.go
@@ -1,6 +1,6 @@
 // Package handler provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.13.0 DO NOT EDIT.
 package handler
 
 import (
@@ -11,15 +11,15 @@ import (
 
 // Defines values for Semester.
 const (
-	SemesterN0 Semester = 0
-	SemesterN1 Semester = 1
+	First  Semester = 0
+	Second Semester = 1
 )
 
 // Defines values for UserAccountState.
 const (
-	UserAccountStateN0 UserAccountState = 0
-	UserAccountStateN1 UserAccountState = 1
-	UserAccountStateN2 UserAccountState = 2
+	Active      UserAccountState = 1
+	Deactivated UserAccountState = 0
+	Suspended   UserAccountState = 2
 )
 
 // Account アカウントへのリンク
@@ -111,25 +111,13 @@ type ContestDetail struct {
 	Teams []ContestTeam `json:"teams"`
 }
 
-// ContestTeam コンテストチーム情報
+// ContestTeam defines model for ContestTeam.
 type ContestTeam struct {
 	// Id コンテストチームuuid
 	Id uuid.UUID `json:"id"`
 
-	// Members チームメンバーのUUID
+	// Members チームメンバーのユーザー情報
 	Members []User `json:"members"`
-
-	// Name チーム名
-	Name string `json:"name"`
-
-	// Result 順位などの結果
-	Result string `json:"result"`
-}
-
-// ContestTeam コンテストチーム情報
-type ContestTeamWithoutMembers struct {
-	// Id コンテストチームuuid
-	Id uuid.UUID `json:"id"`
 
 	// Name チーム名
 	Name string `json:"name"`
@@ -151,6 +139,18 @@ type ContestTeamDetail struct {
 
 	// Members チームメンバーのUUID
 	Members []User `json:"members"`
+
+	// Name チーム名
+	Name string `json:"name"`
+
+	// Result 順位などの結果
+	Result string `json:"result"`
+}
+
+// ContestTeamWithoutMembers コンテストチーム情報(チームメンバーなし)
+type ContestTeamWithoutMembers struct {
+	// Id コンテストチームuuid
+	Id uuid.UUID `json:"id"`
 
 	// Name チーム名
 	Name string `json:"name"`
@@ -481,7 +481,7 @@ type UserContest struct {
 	Name string `json:"name"`
 
 	// Teams コンテストチーム
-	Teams []ContestTeamWithoutMembers `json:"teams"`
+	Teams []ContestTeam `json:"teams"`
 }
 
 // UserDetail defines model for UserDetail.
