# interfaces/handler/user.go
@@ -384,7 +384,7 @@ func newUserContest(contest Contest, teams []ContestTeamWithoutMembers) UserCont
 		Id:       contest.Id,
 		Name:     contest.Name,
 		Duration: contest.Duration,
-		Teams:    teams,
+		Teams:    make([]ContestTeam, 0),
 	}
 }
 
